--- a/cursos/espanol/datascience/6_metricas.ipynb
+++ b/cursos/espanol/datascience/6_metricas.ipynb
@@ -218,9 +218,9 @@
     "y_verdadero = [\"benigno\", \"maligno\", \"maligno\", \"benigno\", \"benigno\"]\n",
     "y_prob = [0.2, 0.91, 0.85, 0.55, 0.3]\n",
     "# suponiendo que elegimos como unbral 0.5\n",
-    "y_predecido = [\"benigno\", \"maligno\", \"maligno\", \"maligno\", \"benigno\"]\n",
+    "y_predicho = [\"benigno\", \"maligno\", \"maligno\", \"maligno\", \"benigno\"]\n",
     "\n",
-    "cm = confusion_matrix(y_verdadero, y_predecido)\n",
+    "cm = confusion_matrix(y_verdadero, y_predicho)\n",
     "disp = ConfusionMatrixDisplay(confusion_matrix=cm,display_labels=[\"benigno\",\"maligno\"])\n",
     "disp.plot();"
    ]
@@ -232,8 +232,8 @@
    "source": [
     "A partir de la matriz de confusion surgen las siguientes metricas:\n",
     "\n",
-    "- **Precision**: TP / (TP + FP) proporcion de datos predecidos correctamente sobre el total de predecidos como de la clase positiva\n",
-    "- **Recall**: TP / (TP + FN) proporcion de datos predecidos correctamente sobre el total real de datos de la clase positiva\n",
+    "- **Precision**: TP / (TP + FP) proporcion de datos predecidos correctamente sobre el total de predichos como de la clase positiva\n",
+    "- **Recall**: TP / (TP + FN) proporcion de datos predichos correctamente sobre el total real de datos de la clase positiva\n",
     "- **F1 Score**: 2 / (1/P + 1/R) medida que contempla ambas metricas de precision y recall\n",
     "- **ROC curve**: Nos muestra una curva con la precision en el eje x y recall en el eje y\n",
     "- **Area Under ROC Curve**: es el area debajo de la curva ROC y es una medida de la capacidad del clasificador para separar las clases"
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "c63301e6-36a2-4890-bd41-88149fd08474",
    "metadata": {},
    "outputs": [
@@ -251,7 +251,7 @@
        "1.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,10 +264,10 @@
     "y_verdadero = [\"benigno\", \"maligno\", \"maligno\", \"benigno\", \"benigno\"]\n",
     "y_prob = [0.2, 0.91, 0.85, 0.55, 0.3]\n",
     "# suponiendo que elegimos como unbral 0.5\n",
-    "y_predecido = [\"benigno\", \"maligno\", \"maligno\", \"maligno\", \"benigno\"]\n",
+    "y_predicho = [\"benigno\", \"maligno\", \"maligno\", \"maligno\", \"benigno\"]\n",
     "\n",
-    "metrics.precision_score(y_verdadero, y_predecido, pos_label=\"maligno\")\n",
-    "metrics.recall_score(y_verdadero, y_predecido, pos_label=\"maligno\")\n",
+    "metrics.precision_score(y_verdadero, y_predicho, pos_label=\"maligno\")\n",
+    "metrics.recall_score(y_verdadero, y_predicho, pos_label=\"maligno\")\n",
     "\n",
     "fpr, tpr, thresholds = metrics.roc_curve(y_verdadero, y_prob, pos_label=\"maligno\")\n",
     "metrics.auc(fpr, tpr)"
@@ -280,22 +280,22 @@
    "source": [
     "**Para regresion:**\n",
     "\n",
-    "Ademas del error cuadratico medio otra metrica muy utilizada es R2 que permite obtener un valor mas ameno ya que varia entre 0 y 1."
+    "Ademas del error cuadratico medio otra metrica muy utilizada es [R2](https://es.wikipedia.org/wiki/Coeficiente_de_determinaci%C3%B3n) que permite obtener un valor mas ameno ya que varia entre 0 y 1."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "fe22094e-c4bd-4264-91c0-c64140160eda",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8440000000000001"
+       "0.8"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,9 +303,34 @@
    "source": [
     "# supongamos que los datos verdaderos son\n",
     "y_verdadero = [1.0, 2.0, 3.0, 4.0]\n",
-    "y_predecido = [1.3, 2.1, 3.2, 4.8]\n",
+    "y_predicho = [1.5, 2.5, 3.5, 4.5]\n",
     "\n",
-    "metrics.r2_score(y_verdadero, y_predecido)"
+    "metrics.r2_score(y_verdadero, y_predicho)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0c597511-6c05-43dd-b07c-b985744a4882",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.992"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# supongamos que los datos verdaderos son\n",
+    "y_verdadero = [1.0, 2.0, 3.0, 4.0]\n",
+    "y_predicho = [1.1, 2.1, 3.1, 4.1]\n",
+    "\n",
+    "metrics.r2_score(y_verdadero, y_predicho)"
    ]
   },
   {
@@ -333,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
