--- a/cursos/espanol/datascience/6_metricas.ipynb
+++ b/cursos/espanol/datascience/6_metricas.ipynb
@@ -40,7 +40,7 @@
     "Ahora solo veremos una para cada metodo y mas adelante en esta unidad veremos mas.\n",
     "\n",
     "**Para regresion:**\n",
-    "- **Error cuadratico medio**: es la suma de las diferencias elevadas al cuadrado. Las diferencias se refieren a la resta entre cada valor predecido y el real. Cuanto menor sea este error mejor entrenada estara nuestra caja negra de regresion.\n",
+    "- **Error cuadratico medio**: es la suma de las diferencias elevadas al cuadrado. Las diferencias se refieren a la resta entre cada valor predicho y el real. Cuanto menor sea este error mejor entrenada estara nuestra caja negra de regresion.\n",
     "\n",
     "**Para clasificacion:**\n",
     "- **Porcentaje de aciertos (Accuracy)**: cuantas predicciones hemos acertado dividido el total de predicciones. Cuanto mayor sea la cantidad de aciertos mejor entrenada estara nuestra caja negra de clasificacion."
@@ -65,7 +65,7 @@
    "source": [
     "# supongamos que los datos verdaderos son\n",
     "y_verdadero = [1.0, 2.0, 3.0, 4.0]\n",
-    "y_predecido = [1.3, 2.1, 3.2, 4.8]"
+    "y_predicho = [1.3, 2.1, 3.2, 4.8]"
    ]
   },
   {
@@ -86,7 +86,7 @@
     }
    ],
    "source": [
-    "metrics.mean_squared_error(y_verdadero, y_predecido)"
+    "metrics.mean_squared_error(y_verdadero, y_predicho)"
    ]
   },
   {
@@ -98,7 +98,7 @@
    "source": [
     "# supongamos que los datos verdaderos son\n",
     "y_verdadero = [\"benigno\", \"maligno\", \"maligno\", \"benigno\", \"benigno\"]\n",
-    "y_predecido = [\"benigno\", \"maligno\", \"maligno\", \"maligno\", \"benigno\"]"
+    "y_predicho = [\"benigno\", \"maligno\", \"maligno\", \"maligno\", \"benigno\"]"
    ]
   },
   {
@@ -119,7 +119,7 @@
     }
    ],
    "source": [
-    "metrics.accuracy_score(y_verdadero, y_predecido)"
+    "metrics.accuracy_score(y_verdadero, y_predicho)"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "source": [
     "A partir de la matriz de confusion surgen las siguientes metricas:\n",
     "\n",
-    "- **Precision**: TP / (TP + FP) proporcion de datos predecidos correctamente sobre el total de predichos como de la clase positiva\n",
+    "- **Precision**: TP / (TP + FP) proporcion de datos predichos correctamente sobre el total de predichos como de la clase positiva\n",
     "- **Recall**: TP / (TP + FN) proporcion de datos predichos correctamente sobre el total real de datos de la clase positiva\n",
     "- **F1 Score**: 2 / (1/P + 1/R) medida que contempla ambas metricas de precision y recall\n",
     "- **ROC curve**: Nos muestra una curva con la precision en el eje x y recall en el eje y\n",
