--- a/cursos/espanol/datascience/A1.0_graficos_seaborn.ipynb
+++ b/cursos/espanol/datascience/A1.0_graficos_seaborn.ipynb
@@ -242,6 +242,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2447d1fc-62a4-40a8-ba3e-ffc56a8ebfab",
+   "metadata": {},
+   "source": [
+    "## Heatmap de correlaciones"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "301de3d5-9c9e-4076-92ce-098351981a51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "corr_data = tips[[\"total_bill\",\"tip\",\"size\"]].corr()\n",
+    "sns.heatmap(corr_data, annot=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "5acf156d-e531-4191-9404-d62d45056bc5",
    "metadata": {},
    "source": [
