--- a/cursos/espanol/datascience/6_metricas.ipynb
+++ b/cursos/espanol/datascience/6_metricas.ipynb
@@ -280,7 +280,7 @@
    "source": [
     "**Para regresion:**\n",
     "\n",
-    "Ademas del error cuadratico medio otra metrica muy utilizada es [R2](https://es.wikipedia.org/wiki/Coeficiente_de_determinaci%C3%B3n) que permite obtener un valor mas ameno ya que varia entre 0 y 1."
+    "Ademas del error cuadratico medio otra metrica muy utilizada es [R2](https://es.wikipedia.org/wiki/Coeficiente_de_determinaci%C3%B3n) que permite obtener un valor mas ameno ya que varia entre 0 y 1 donde 0 es la peor prediccion y 1 la prediccion perfecta."
    ]
   },
   {
