--- a/cursos/espanol/datascience/6_metricas.ipynb
+++ b/cursos/espanol/datascience/6_metricas.ipynb
@@ -232,7 +232,7 @@
    "source": [
     "A partir de la matriz de confusion surgen las siguientes metricas:\n",
     "\n",
-    "- **Precision**: TP / (TP + FP) proporcion de datos predichos correctamente sobre el total de predichos como de la clase positiva\n",
+    "- **Precision**: TP / (TP + FP) proporcion de datos predichos correctamente sobre el total de predichos de la clase positiva\n",
     "- **Recall**: TP / (TP + FN) proporcion de datos predichos correctamente sobre el total real de datos de la clase positiva\n",
     "- **F1 Score**: 2 / (1/P + 1/R) medida que contempla ambas metricas de precision y recall\n",
     "- **ROC curve**: Nos muestra una curva con la precision en el eje x y recall en el eje y\n",
