--- a/cursos/espanol/datascience/E3_regresion_lineal_frecuentista.ipynb
+++ b/cursos/espanol/datascience/E3_regresion_lineal_frecuentista.ipynb
@@ -5,7 +5,7 @@
    "id": "88b45627-5795-462f-ac44-38ecdf11babf",
    "metadata": {},
    "source": [
-    "# Regresion Lineal y Logistica"
+    "# Regresion Lineal"
    ]
   },
   {
