--- a/cursos/espanol/datascience/6_metricas.ipynb
+++ b/cursos/espanol/datascience/6_metricas.ipynb
@@ -455,7 +455,7 @@
    "id": "139affa4-7a14-440e-92d0-ed42877e3f87",
    "metadata": {},
    "source": [
-    "### Grafico de residuos o errores"
+    "#### Grafico de residuos o errores"
    ]
   },
   {
@@ -511,6 +511,16 @@
    "source": [
     "import seaborn as sns\n",
     "sns.residplot(x=y_predicho,y=residuos);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "287c838c-bddf-4caa-a51d-0ebcc5863eaf",
+   "metadata": {},
+   "source": [
+    "### Configuracion de metricas en sklearn\n",
+    "\n",
+    "Sklearn nos brinda una gran variedad de metricas y la posibilidad de configurar la metrica que queremos que utilice al realizar gridsearch y cross validation. En este [link](https://scikit-learn.org/stable/modules/model_evaluation.html#) podemos ver como hacerlo."
    ]
   },
   {
