--- a/cursos/espanol/datascience/4_caja_negra.ipynb
+++ b/cursos/espanol/datascience/4_caja_negra.ipynb
@@ -260,7 +260,7 @@
    "id": "b065d81d-3404-4393-9111-d87b97bc7a67",
    "metadata": {},
    "source": [
-    "Predecimos los valores para cada fila de X y guardamos los valores predecidos en una variable llamada y_predecidos"
+    "Predecimos los valores para cada fila de X y guardamos los valores y_predichos en una variable llamada y_predecidos"
    ]
   },
   {
@@ -270,8 +270,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_predecidos = caja_negra.predict(X)\n",
-    "y_predecidos"
+    "y_predichos = caja_negra.predict(X)\n",
+    "y_predichos"
    ]
   },
   {
@@ -279,7 +279,7 @@
    "id": "ab5b2b66-14e2-45cd-8a1c-c3f87ec93413",
    "metadata": {},
    "source": [
-    "Guardamos los valores reales del precio de nuestra tabla de prueba en una variable y_verdaderos para poder compararlos contra los predecidos"
+    "Guardamos los valores reales del precio de nuestra tabla de prueba en una variable y_verdaderos para poder compararlos contra los y_predichos"
    ]
   },
   {
@@ -298,7 +298,7 @@
    "id": "d3451e52-5062-4bb1-91bd-afe1547f27c7",
    "metadata": {},
    "source": [
-    "Si restamos uno a uno los valores reales y predecidos podemos ver la diferencia entre cada uno:"
+    "Si restamos uno a uno los valores reales y y_predichos podemos ver la diferencia entre cada uno:"
    ]
   },
   {
@@ -308,7 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_verdaderos - y_predecidos"
+    "y_verdaderos - y_predichos"
    ]
   },
   {
