--- a/cursos/espanol/datascience/6_metricas.ipynb
+++ b/cursos/espanol/datascience/6_metricas.ipynb
@@ -192,7 +192,16 @@
     "1. Puede haber muchos mas datos de una clase que de otra y nos llevara a un accuracy alto pero que no es util\n",
     "2. La mayoria de los algoritmos de clasificacion nos da la probabilidad de que un dato sea de una clase u otra por lo que deberemos elegir un limite a partir del cual decimos que es de una clase u otra.\n",
     "\n",
-    "Elegido un umbral para la clasificacion, la matriz de confusion nos permite ver cuantos datos de cada clase han sido bien o mal clasificados."
+    "Elegido un umbral para la clasificacion, la matriz de confusion nos permite ver cuantos datos de cada clase han sido bien o mal clasificados y aparecen **dos tipos de errores**:\n",
+    "1. Cuando decimos que la prediccion es positiva y en verdad es negativa: **Falso Positivo**\n",
+    "2. Cuando decimos que la prediccion es negativa y en verdad es positiva: **Falso Negativo**\n",
+    "\n",
+    "Unas primeras metricas surgen de analizar la proporcion de estos dos tipos de errores:\n",
+    "\n",
+    "- La proporcion de **Falsos Positivos** (FPR = FP / N) se conoce tambien como **Error de Tipo 1**. Podemos pensar en ellos con la pregunta: De los que son realmente negativos cuantos no acerte?\n",
+    "- La proporcion de **Falsos Negativos** (FNR = FN / P) se conoce tambien como **Error de Tipo 2**. Podemos pensar en ellos con la pregunta: De los que son realmente positivos cuantos no acerte?\n",
+    "\n",
+    "Veamos un ejemplo:"
    ]
   },
   {
@@ -230,11 +239,14 @@
    "id": "a7e8b334-5769-4852-8dd1-f43e199ed99c",
    "metadata": {},
    "source": [
-    "A partir de la matriz de confusion surgen las siguientes metricas:\n",
+    "A partir de la [matriz de confusion](https://en.wikipedia.org/wiki/Confusion_matrix) surgen las siguientes metricas:\n",
     "\n",
     "- **Precision**: TP / (TP + FP) proporcion de datos predichos correctamente sobre el total de predichos de la clase positiva\n",
-    "- **Recall**: TP / (TP + FN) proporcion de datos predichos correctamente sobre el total real de datos de la clase positiva\n",
+    "- **Recall**: TP / (TP + FN) proporcion de datos predichos correctamente sobre el total de datos de la clase positiva\n",
     "- **F1 Score**: 2 / (1/P + 1/R) medida que contempla ambas metricas de precision y recall\n",
+    "\n",
+    "Y si analizamos todas las matrices de confusion que surgen de elegir distintos umbrales aparecen nuevas metricas:\n",
+    "\n",
     "- **ROC curve**: Nos muestra una curva con la precision en el eje x y recall en el eje y\n",
     "- **Area Under ROC Curve**: es el area debajo de la curva ROC y es una medida de la capacidad del clasificador para separar las clases"
    ]
