--- a/cursos/espanol/datascience/6_metricas.ipynb
+++ b/cursos/espanol/datascience/6_metricas.ipynb
@@ -247,8 +247,9 @@
     "\n",
     "Y si analizamos todas las matrices de confusion que surgen de elegir distintos umbrales aparecen nuevas metricas:\n",
     "\n",
-    "- **ROC curve**: Nos muestra una curva con la precision en el eje x y recall en el eje y\n",
-    "- **Area Under ROC Curve**: es el area debajo de la curva ROC y es una medida de la capacidad del clasificador para separar las clases"
+    "- **[ROC curve](https://en.wikipedia.org/wiki/Receiver_operating_characteristic)**: Nos muestra una curva con los **Falsos Positivos** en el eje x y los **Falsos Negativos** en el eje y\n",
+    "- **Area Under ROC Curve**: es el area debajo de la curva ROC y es una medida de la capacidad del clasificador para separar las clases\n",
+    "- **[Precision Recall Curve](https://scikit-learn.org/stable/auto_examples/model_selection/plot_precision_recall.html#plot-the-precision-recall-curve)**: Nos muestra una curva con **Recall** en el eje x y **Precision** en el eje y"
    ]
   },
   {
