--- a/cursos/espanol/datascience/6_metricas.ipynb
+++ b/cursos/espanol/datascience/6_metricas.ipynb
@@ -190,7 +190,7 @@
     "    \n",
     "Cuando realizamos una clasificacion intervienen varios factores:\n",
     "1. Puede haber muchos mas datos de una clase que de otra y nos llevara a un accuracy alto pero que no es util\n",
-    "2. La mayoria de los algoritmos de clasificacion nos da la probabilidad de que un dato sea de una clase u otra por lo que deberemos elegir un limite a partir del cual decimos que es de una clase u otra.\n",
+    "2. La mayoria de los algoritmos de clasificacion nos da la **probabilidad** de que un dato sea de una clase u otra por lo que deberemos elegir un **limite o umbral** a partir del cual decimos que es de una clase u otra.\n",
     "\n",
     "Elegido un umbral para la clasificacion, la matriz de confusion nos permite ver cuantos datos de cada clase han sido bien o mal clasificados y aparecen **dos tipos de errores**:\n",
     "1. Cuando decimos que la prediccion es positiva y en verdad es negativa: **Falso Positivo**\n",
@@ -226,7 +226,7 @@
     "\n",
     "y_verdadero = [\"benigno\", \"maligno\", \"maligno\", \"benigno\", \"benigno\"]\n",
     "y_prob = [0.2, 0.91, 0.85, 0.55, 0.3]\n",
-    "# suponiendo que elegimos como unbral 0.5\n",
+    "# suponiendo que elegimos como umbral 0.5\n",
     "y_predicho = [\"benigno\", \"maligno\", \"maligno\", \"maligno\", \"benigno\"]\n",
     "\n",
     "cm = confusion_matrix(y_verdadero, y_predicho)\n",
