--- a/cursos/espanol/datascience/12_gradio.ipynb
+++ b/cursos/espanol/datascience/12_gradio.ipynb
@@ -234,6 +234,41 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e200679b-16a5-4714-8a22-b5956b39c276",
+   "metadata": {},
+   "source": [
+    "## Subir un fichero"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6cdc97bc-cfe1-4462-9d83-c9db667b8064",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gradio as gr\n",
+    "import pandas as pd\n",
+    "\n",
+    "def load_and_display_csv(file):\n",
+    "    df = pd.read_csv(file.name)\n",
+    "    return df\n",
+    "\n",
+    "with gr.Blocks() as demo:\n",
+    "    gr.Markdown(\"## Subir un fichero\")\n",
+    "\n",
+    "    with gr.Row():\n",
+    "      with gr.Column():\n",
+    "        file_input = gr.File(label=\"Subir un fichero\")\n",
+    "        df_output = gr.Dataframe(label=\"Mi Dataframe\")\n",
+    "\n",
+    "    file_input.change(load_and_display_csv, inputs=file_input, outputs=df_output)\n",
+    "\n",
+    "demo.launch(share=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c63efd06-21fb-4161-b3cc-240aa01d2fe5",
    "metadata": {},
    "source": [
@@ -269,7 +304,9 @@
     "- inicio de la app\n",
     "\n",
     "Una vez que hagamos commit nuestra app estara disponible en:\n",
-    "https://nombredeusuario-nombredelspace.hf.space/"
+    "https://nombredeusuario-nombredelspace.hf.space/\n",
+    "\n",
+    "Si no funciona esta url buscar en el boton de tres puntos \"Embed this Space\" ahi podremos ver la url correcta."
    ]
   },
   {
