--- a/cursos/espanol/deeplearning/E5_Transformers_Arch.ipynb
+++ b/cursos/espanol/deeplearning/E5_Transformers_Arch.ipynb
@@ -13,9 +13,13 @@
     "\n",
     "[Implement a transformer from scratch with pytorch by Andrej Karpathy (OpenAI, Stanford)](https://www.youtube.com/watch?v=kCc8FmEb1nY)\n",
     "\n",
-    "[Deep NN course by Francois Fleuret](https://fleuret.org/dlc/)\n",
+    "[The Illustrated Transformer by Jay Alammar](https://jalammar.github.io/illustrated-transformer/)\n",
     "\n",
     "[Step by step without math by Miguel Grinberg](https://blog.miguelgrinberg.com/post/how-llms-work-explained-without-math)\n",
+    "\n",
+    "[Original Attention Is All You Need paper with code](https://nlp.seas.harvard.edu/2018/04/03/attention.html)\n",
+    "\n",
+    "[Deep NN course by Francois Fleuret](https://fleuret.org/dlc/)\n",
     "\n",
     "------------------------------\n",
     "\n",
