--- a/cursos/espanol/datascience/Timeseries.ipynb
+++ b/cursos/espanol/datascience/Timeseries.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Prediccion de Series de Tiempo (Time Series Forecasting)\n",
     "\n",
-    "Es un caso especial de Machine Learning. Si bien se pueden utilizar los algoritmos clasicos de ML existen algoritmos especiales para la prediccion de series de tiempo.\n",
+    "Es un caso especial de Machine Learning. Si bien se pueden utilizar los algoritmos clasicos de ML existen algoritmos y librerias especiales para la prediccion de series de tiempo que nos facilitaran el trabajo y nos ahorraran mucho tiempo.\n",
     "\n",
     "Libreria Sktime:\n",
     "- [GitHub](https://github.com/sktime/sktime)\n",
@@ -17,7 +17,7 @@
     "- [Ejemplo](https://nbviewer.org/github/pycaret/pycaret/blob/master/tutorials/Tutorial%20-%20Time%20Series%20Forecasting.ipynb)\n",
     "\n",
     "Descomposicion de Series de Tiempo:\n",
-    "- https://machinelearningmastery.com/decompose-time-series-data-trend-seasonality/"
+    "- https://otexts.com/fpp2/classical-decomposition.html "
    ]
   },
   {
