--- a/cursos/espanol/deeplearning/E0_redes_neuronales.ipynb
+++ b/cursos/espanol/deeplearning/E0_redes_neuronales.ipynb
@@ -947,8 +947,19 @@
    "source": [
     "Referencias de las imagenes:\n",
     "\n",
-    "- Neurona: https://en.wikipedia.org/wiki/Neuron#/media/File:Blausen_0657_MultipolarNeuron.png"
+    "- Neurona: https://en.wikipedia.org/wiki/Neuron#/media/File:Blausen_0657_MultipolarNeuron.png\n",
+    "\n",
+    "Otros recursos interesantes:\n",
+    "- [Operaciones matriciales de redes neuronales a mano](https://aibyhand.substack.com/t/advanced)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf6dfe46-a6fa-4f90-b6c4-46237984910b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -967,7 +978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
