--- a/cursos/espanol/programacion/2_condiciones.ipynb
+++ b/cursos/espanol/programacion/2_condiciones.ipynb
@@ -460,6 +460,87 @@
   },
   {
    "cell_type": "markdown",
+   "id": "453405d8-4f4f-4d35-8eae-6e078e86e299",
+   "metadata": {},
+   "source": [
+    "Para entender mejor como funcionan ver el siguiente video:\n",
+    "\n",
+    "<video width=\"540\" height=\"540\" controls src=\"img/logic_gates.mp4\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51fcd9f0-19b1-4594-b76a-925a1512667f",
+   "metadata": {},
+   "source": [
+    "Tener en cuenta que and se ejecuta antes que or. Para asegurarnos de que el orden de ejecucion sea el que queremos podemos utilizar parentesis:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "beec199c-ec24-413a-81fd-49772339e974",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "False and False or True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "acf283ed-6673-41cc-8461-3f822f15bc98",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(False and False) or True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "3235c6d3-6cc1-4bea-b478-9febff3ee891",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "False and (False or True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7f673cf8-5651-438d-8397-6f20f641d8e2",
    "metadata": {},
    "source": [
@@ -683,7 +764,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
