--- a/cursos/espanol/datascience/Clustering.ipynb
+++ b/cursos/espanol/datascience/Clustering.ipynb
@@ -7,6 +7,9 @@
    "source": [
     "# Clustering\n",
     "\n",
+    "Resumen de las distintas tecnicas y metricas de clustering:\n",
+    "- [En scikit learn](https://scikit-learn.org/stable/modules/clustering.html)\n",
+    "\n",
     "Visualizaciones:\n",
     "- [Kmeans](https://www.naftaliharris.com/blog/visualizing-k-means-clustering/)\n",
     "- [DBScan](https://www.naftaliharris.com/blog/visualizing-dbscan-clustering/)\n",
@@ -23,6 +26,7 @@
     "\n",
     "Casos de Uso Reales:\n",
     "- [Clustering Residential Electricity Consumption Data to Create Archetypes that Capture Household Behaviour in South Africa](https://arxiv.org/abs/2006.07197)\n",
+    "- [Otros usos](https://en.wikipedia.org/wiki/Cluster_analysis#Applications)\n",
     "\n",
     "Notas:\n",
     "- [Sobre las metricas](https://arxiv.org/abs/2212.12189)\n",
@@ -52,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 62,
    "id": "764124f1-9b64-4870-8540-a32301917311",
    "metadata": {},
    "outputs": [
