--- a/cursos/espanol/datascience/analysis/unsupervised/PCA.ipynb
+++ b/cursos/espanol/datascience/analysis/unsupervised/PCA.ipynb
@@ -13,7 +13,10 @@
     "\n",
     "Usos practicos:\n",
     "- [Imagenes](https://scikit-learn.org/stable/modules/decomposition.html)\n",
-    "- [Medicina y otros usos](https://stats.stackexchange.com/questions/609829/practical-usefulness-of-pca)"
+    "- [Medicina y otros usos](https://stats.stackexchange.com/questions/609829/practical-usefulness-of-pca)\n",
+    "\n",
+    "Utils:\n",
+    "- [Recuperacion de informacion sobre el aporte de cada variable](https://stackoverflow.com/questions/22984335/recovering-features-names-of-explained-variance-ratio-in-pca-with-sklearn)"
    ]
   },
   {
