--- a/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb
+++ b/cursos/espanol/deeplearning/1_imagenes_a_vectores.ipynb
@@ -263,12 +263,14 @@
     "# Mostrar los vectores con  un scatter plot\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
     "\n",
     "# axes instance\n",
     "fig = plt.figure(figsize=(6,6))\n",
-    "ax = Axes3D(fig)\n",
-    "fig.add_axes(ax)\n",
+    "plt.clf()\n",
+    "\n",
+    "ax = fig.add_subplot(111, projection=\"3d\", elev=10, azim=10)\n",
+    "ax.set_position([0, 0, 0.95, 1])\n",
+    "plt.cla()\n",
     "\n",
     "# plot\n",
     "colores = ['red' if x == 'madura' else 'blue' for x in df.clase]\n",
