--- a/cursos/espanol/deeplearning/llms/OpenAI_Assistants.ipynb
+++ b/cursos/espanol/deeplearning/llms/OpenAI_Assistants.ipynb
@@ -63,7 +63,7 @@
    "id": "51422385-9e51-43ac-b625-c42ba963eae7",
    "metadata": {},
    "source": [
-    "### OpenAI functions:"
+    "### OpenAI tools:"
    ]
   },
   {
@@ -95,23 +95,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define a function\n",
-    "functions = [\n",
-    "    {\n",
-    "        \"name\": \"get_current_weather\",\n",
-    "        \"description\": \"Get the current weather in a given location\",\n",
-    "        \"parameters\": {\n",
-    "            \"type\": \"object\",\n",
-    "            \"properties\": {\n",
-    "                \"location\": {\n",
-    "                    \"type\": \"string\",\n",
-    "                    \"description\": \"The city and state, e.g. San Francisco, CA\",\n",
-    "                },\n",
-    "                \"unit\": {\"type\": \"string\", \"enum\": [\"celsius\", \"fahrenheit\"]},\n",
-    "            },\n",
-    "            \"required\": [\"location\"],\n",
+    "# define a tool\n",
+    "tools = [\n",
+    "  {\n",
+    "    \"type\": \"function\",\n",
+    "    \"function\": {\n",
+    "      \"name\": \"get_current_weather\",\n",
+    "      \"description\": \"Get the current weather in a given location\",\n",
+    "      \"parameters\": {\n",
+    "        \"type\": \"object\",\n",
+    "        \"properties\": {\n",
+    "          \"location\": {\n",
+    "            \"type\": \"string\",\n",
+    "            \"description\": \"The city and state, e.g. San Francisco, CA\"\n",
+    "          },\n",
+    "          \"unit\": {\n",
+    "            \"type\": \"string\",\n",
+    "            \"enum\": [\"celsius\", \"fahrenheit\"]\n",
+    "          }\n",
     "        },\n",
+    "        \"required\": [\"location\"]\n",
+    "      }\n",
     "    }\n",
+    "  }\n",
     "]"
    ]
   },
@@ -137,11 +143,95 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = openai.ChatCompletion.create(\n",
-    "    model=\"gpt-3.5-turbo-0613\",\n",
+    "response = openai.chat.completions.create(\n",
+    "    model=\"gpt-4\",\n",
     "    messages=messages,\n",
-    "    functions=functions\n",
+    "    tools=tools,\n",
+    "    tool_choice=\"auto\",\n",
+    "    max_tokens=100,\n",
+    "    temperature=0.5,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2e4f49a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6be84c4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Function to call:\",response.choices[0].message.tool_calls[0].function.name)\n",
+    "print(\"Function arguments:\",response.choices[0].message.tool_calls[0].function.arguments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7089822",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "messages.append(response.choices[0].message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29303f6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step 2: determine if the response from the model includes a tool call.   \n",
+    "tool_calls = response.choices[0].message.tool_calls\n",
+    "if tool_calls:\n",
+    "    # If true the model will return the name of the tool / function to call and the argument(s)  \n",
+    "    tool_call_id = tool_calls[0].id\n",
+    "    tool_function_name = tool_calls[0].function.name\n",
+    "    tool_function_arguments = eval(tool_calls[0].function.arguments)\n",
+    "    \n",
+    "    # Step 3: Call the function and retrieve results. Append the results to the messages list.      \n",
+    "    if tool_function_name == 'get_current_weather':\n",
+    "        results = get_current_weather(**tool_function_arguments)\n",
+    "        \n",
+    "        messages.append({\n",
+    "            \"role\":\"tool\", \n",
+    "            \"tool_call_id\":tool_call_id, \n",
+    "            \"name\": tool_function_name, \n",
+    "            \"content\":results\n",
+    "        })\n",
+    "        \n",
+    "        # Step 4: Invoke the chat completions API with the function response appended to the messages list\n",
+    "        # Note that messages with role 'tool' must be a response to a preceding message with 'tool_calls'\n",
+    "        model_response_with_function_call = openai.chat.completions.create(\n",
+    "            model=\"gpt-4\",\n",
+    "            messages=messages,\n",
+    "        )  # get a new response from the model where it can see the function response\n",
+    "        print(model_response_with_function_call.choices[0].message.content)\n",
+    "    else: \n",
+    "        print(f\"Error: function {tool_function_name} does not exist\")\n",
+    "else: \n",
+    "    # Model did not identify a function to call, result can be returned to the user \n",
+    "    print(response.content) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0ac13c9",
+   "metadata": {},
+   "source": [
+    "## Referencias:\n",
+    "\n",
+    "- https://cookbook.openai.com/examples/how_to_call_functions_with_chat_models"
    ]
   },
   {
