--- a/cursos/espanol/deeplearning/nn_architectures/E0_redes_neuronales.ipynb
+++ b/cursos/espanol/deeplearning/nn_architectures/E0_redes_neuronales.ipynb
@@ -16,7 +16,7 @@
     "Como es una neurona?\n",
     "\n",
     "<div style=\"text-align:center\">\n",
-    "<img src=\"../img/neurona.png\" width=\"500\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/deeplearning/img/neurona.png\" width=\"500\"/>\n",
     "</div>"
    ]
   },
@@ -33,7 +33,7 @@
     "- El axon es la variable de salida\n",
     "\n",
     "<div style=\"text-align:center\">\n",
-    "<img src=\"../img/neurona_matematica.png\" width=\"700\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/deeplearning/img/neurona_matematica.png\" width=\"700\"/>\n",
     "</div>"
    ]
   },
@@ -926,9 +926,8 @@
    "metadata": {},
    "source": [
     "<video witdth=\"640\"\n",
-    "       controls \n",
-    "       src=\"../videos/Backpropagation.mp4\">\n",
-    "    Backpropagation\n",
+    "       controls\n",
+    "       src=\"https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/deeplearning/videos/Backpropagation.mp4\">\n",
     "</video>"
    ]
   },
