--- a/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
+++ b/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
@@ -131,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from transformers import pipeline, Conversation"
+    "from transformers import pipeline"
    ]
   },
   {
@@ -141,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "converse = pipeline(\"conversational\", model=\"microsoft/DialoGPT-medium\")"
+    "summarizer = pipeline(\"summarization\")"
    ]
   },
   {
@@ -151,9 +151,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conversation_1 = Conversation(\"Going to the movies tonight - any suggestions?\")\n",
-    "conversation_2 = Conversation(\"What's the last book you have read?\")\n",
-    "converse([conversation_1, conversation_2])"
+    "texto = \"\"\"Paris is the capital and most populous city of France, \n",
+    "with an estimated population of 2,175,601 residents as of 2018, \n",
+    "in an area of more than 105 square kilometres (41 square miles). \n",
+    "The City of Paris is the centre and seat of government of the region \n",
+    "and province of Île-de-France, or Paris Region, which has an estimated \n",
+    "population of 12,174,880, or about 18 percent of \n",
+    "the population of France as of 2017.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54897494",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summarizer(texto, max_length=30, min_length=10)"
    ]
   },
   {
