--- a/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
+++ b/cursos/espanol/deeplearning/3_redes_preentrenadas.ipynb
@@ -71,8 +71,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# si no tenemos instalada la libreria la podemos instalar usando pip\n",
-    "!pip install transformers --upgrade --quiet"
+    "# si no tenemos instaladas las librerias la podemos instalar usando pip\n",
+    "! pip install -U accelerate\n",
+    "! pip install -U transformers[torch]\n",
+    "! pip install -U diffusers[torch]"
    ]
   },
   {
