--- a/cursos/espanol/deeplearning/llms/Ollama_Prompting.ipynb
+++ b/cursos/espanol/deeplearning/llms/Ollama_Prompting.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "Una vez instalado descargar y ejecutar un LLM mediante la terminal o ventana de comandos con el siguiente comando:\n",
     "```shell\n",
-    "ollama run gemma:2b\n",
+    "ollama run gemma\n",
     "```\n",
     "\n",
     "Luego podemos empezar a ejecutar el siguiente codigo de python para interactuar con el modelo"
@@ -598,7 +598,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
